<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnContinueText">Continue with LDAP</string>
    <string name="txtWelcomeText">social@iitb</string>
    <string name="btnLDAPEntryNextText">Next</string>
    <string name="txtLDAPEntryInst1Text">Enter your IIT Bombay LDAP ID</string>
    <string name="btnLDAPEntryInst2Text">You must be a student of IITB in order to use this app</string>
    <string name="editTextTextEmailAddressHint">e.g. 20d170099@iitb.ac.in</string>
    <string name="btnVerifyOTPText">Verfiy OTP</string>
    <string name="btnResendOTPText">Resend OTP</string>
    <string name="txtPasswordEntryInst1Text">Set a password for your account</string>
    <string name="txtPasswordEntryInst2Text">Create a strong password. अगर आपका account hack करने के बाद hacker ने आपका काट दिया तो हम जिम्मेदार नहीं हैं।</string>
    <string name="txtCreateUserFragmentInst1Text">Almost Done!</string>
    <string name="txtCreateUserFragmentInst2Text">We have sent a verification email to your LDAP account. Please click the link in the email and then tap the button below.</string>
    <string name="btnCreateUserFragmentNextText">Verify and Next</string>
    <string name="rbtnMaleText">Male</string>
    <string name="rbtnFemaleText">Female</string>
    <string name="rbtnOtherText">Prefer not to say</string>
    <string name="btnGetDetailsDoneText">Next</string>

    <string name="app_name">IITinder</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">confirm password</string>
    <string name="emailid">email</string>
    <string name="Password">password</string>
    <string name="username">username</string>
    <string name="next">next</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="Login">Login</string>
    <string name="phone_no">Phone No.</string>

    <string name="biosample">HImalsdjfaldfhaofaosdguaigasglb
    asfdasdgagawsgafgasfgasfgasfgasfgasfga
    sfgafgasgdasfgasfgasfgasfgasfgafgafsg</string>

    <string name="USER_NAME">NAME</string>
    <string name="USER_EMAIL">EMAIL</string>
    <string name="USER_MOBILE">9876543211</string>
    <string name="USER_GENDER">M</string>
</resources>